Added aspect ratio in application configs

--- a/src/server/WebRoot/apps/Calculator/index.htm
+++ b/src/server/WebRoot/apps/Calculator/index.htm
@@ -35,7 +35,7 @@ body {
 	font-size: 100%; 
 	background-color: #ccc; 
 	border: none; 
-	text-align: right; 
+	text-align: left; 
 
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -116,7 +116,7 @@ body {
 </style><style type="text/css"></style>
 </head>
 <body onload="Calc.init()" onresize="Calc.redraw()" style="font-size: 70px; ">
-<div id="container" style="width: 1366px; height: 653px; ">
+<div id="container" style="width: 1366px; height: 653px;">
 <input id="resultInput" type="text" value="">
 <table id="basic" cellpadding="0" cellspacing="0" style="width: 555px; ">	
 	<tbody><tr>
@@ -386,19 +386,6 @@ var Calc = (function() {
 })();
 </script>
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-11640584-2']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 
 
