Improved applications, tuned themes

--- a/src/server/WebRoot/apps/Checkers/index.htm
+++ b/src/server/WebRoot/apps/Checkers/index.htm
@@ -3,7 +3,7 @@
 <title>Javascript Checkers</title>
 </head>
 
-<body bgcolor="transparent">
+<body bgcolor="black">
 
 <script language="JavaScript1.1">
 document.addEventListener('GLALoad', onGLALoad, false);
