--- a/src/server/WebRoot/apps/AngryBirdsRio/index.html
+++ b/src/server/WebRoot/apps/AngryBirdsRio/index.html
@@ -5,7 +5,7 @@
 body{
 	margin:0;
 	padding:0;
-	background: transparent;
+	background: black;
 }
 </style>
 <script src="jquery-1.6.3.min.js"></script>
