--- a/src/server/WebRoot/apps/Calculator/index.htm
+++ b/src/server/WebRoot/apps/Calculator/index.htm
@@ -25,7 +25,7 @@ body {
 	font-family: Tahoma, Geneva, sans-serif;
 	margin: 0; 
 	padding: 0; 
-	background-color: transparent; 
+	background-color: black; 
 }
 #resultInput { 
 	display: block;
