Improved dynamic resize (no more flickering)

--- a/src/server/WebRoot/apps/Checkers/index.htm
+++ b/src/server/WebRoot/apps/Checkers/index.htm
@@ -11,8 +11,8 @@
 </head>
 <body>
 <canvas id="checkerscanvas" width="600" height="600" style="margin-top: 16px;"></canvas>
-<p style="margin-top:10;font-style:normal" class="legend"><span id="checkerturn">Red's Turn!</span></p>
-<p style="margin-top:0;font-style:normal" class="legend">
+<p style="margin-top:0;font-style:normal" class="legend"><span id="checkerturn">Red's Turn!</span></p>
+<p style="margin-top:0;font-style:normal; display: none;" class="legend">
 	Moves: <span id="checkersmovecount">0</span>
 	Red Moves: <span id="redmovecount">0</span>
 	Black Moves: <span id="blackmovecount">0</span>
